--- a/gunviolence/Dockerfile
+++ b/gunviolence/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y \
     pandoc \
     pandoc-citeproc \
     libcurl4-gnutls-dev \
-    libcairo2-dev/unstable \
+    libcairo2-dev \
     libxt-dev \
     libxml2-dev \
     libssl-dev \
